# TortoisebotCatkin

./: README.md
hare_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
hare_description/robots/: harebot.urdf.xacro  tortoisebot.urdf.xacro~  tortoisebot2.urdf.xacro.bak~  tortoisebot2.urdf.xacro~
hare_description/urdf/: tortoisebot.urdf.xacro~
hare_description/urdf/turtlebot_modified/: README.md  kinect.urdf.xacro  kinect.urdf.xacro~  turtlebot_gazebo.urdf.xacro
harebot_bringup/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
harebot_bringup/launch/: harebot.launch  simulation.launch  simulation.launch~  tortoisebot.launch~
harebot_docs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
harebot_docs/docs/: harebot_bringup.odt
